# copiloto

./: .dockerignore  .gitignore  ARCHITECTURE.md  PLANO-SAAS.md  PLANO.md  README.md  SPEC.md  development_plan.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: cli.py
backend/app/api/: auth.py  avaliador.py  deps.py  main.py  pool.py  repo.py  servico.py
backend/app/api/rotas/: ativo.py  autenticacao.py  carteira.py  contexto.py  feed.py  preferencias.py  resumo.py  tese.py
backend/app/ativos/: acao.py  base.py  decisao.py  fii.py  sem_criterio.py
backend/app/carteira/: base.py  fontes.py
backend/app/contexto/: buscador.py
backend/app/core/: b3_universe.py  config.py  db.py  gdelt_map.py  params.yaml  universe.py
backend/app/engine/: barriers.py  cross_sectional.py  fundamentos.py  indicators.py  momentum.py  regime.py  signals.py  value.py
backend/app/ingest/: binance.py  corporate.py  cotahist.py  cvm.py  cvm_fii.py  fincontrol.py  fundamentals.py  gaps.py  gdelt.py  store.py  yahoo.py
backend/app/mercado/: feed.py
backend/app/resumo/: briefing.py
backend/app/tese/: motor.py  repo.py
backend/app/vigia/: motor.py  telegram.py
backend/backtest/: core.py  grid.py  information.py  metrics.py  portfolio.py  runner.py  sentiment_test.py
backend/tests/: test_api.py  test_ativos.py  test_auth.py  test_backtest.py  test_carteira_fonte.py  test_contexto.py  test_corporate.py  test_cross_sectional.py  test_engine.py  test_feed.py  test_fii.py  test_fincontrol.py  test_fundamentos.py  test_information.py  test_momentum.py  test_novidades.py  test_resumo.py  test_store.py  test_tese.py  test_value.py  test_vigia.py
deploy/: .env.example  README.md  docker-compose.yml
infra/: agendar.ps1  schema.sql  schema_saas.sql
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  (+2 more)
(+16 files in other folders)
