[project]
name = "day-and-swing"
version = "0.1.0"
description = "Motor quantamental — uso próprio"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "email-validator>=2.1",   # o pydantic EmailStr (cadastro) precisa dele; local tinha por acaso
]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
dands = "app.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "backtest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
